--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,4 @@
+# @AngularClass
 # http://editorconfig.org
 
 root = true
@@ -11,5 +12,9 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.md]
+insert_final_newline = false
+trim_trailing_whitespace = false
+
+[*.json]
 insert_final_newline = false
 trim_trailing_whitespace = false
