--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/onehungrymind/fem-ng2-rest-app",
   "scripts": {
     "client": "npm run client:dev:hmr",
-    "client:dev": "webpack-dev-server --inline --progress --profile --colors --watch --display-error-details --display-cached  --port 3001 --content-base client/public",
+    "client:dev": "webpack-dev-server --inline --colors --watch --display-error-details --display-cached  --port 3001 --content-base client/public",
     "client:dev:hmr": "npm run client:dev -- --hot",
     "server": "json-server --watch server/api/db.json",
     "test": "karma start",
