--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-spec-reporter": "0.0.24",
     "karma-webpack": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.5",
+    "raw-loader": "^0.5.1",
     "source-map-loader": "^0.1.5",
     "typescript": "^1.7.3",
     "webpack": "^1.12.14",
