--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "es6-shim": "^0.33.13",
     "reflect-metadata": "0.1.2",
     "rxjs": "^5.0.0-beta.2",
-    "systemjs": "^0.19.8",
-    "zone.js": "^0.5.15"
+    "systemjs": "^0.19.8"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^0.16.0-rc.0",
