--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "postinstall": "npm run typings-install"
   },
   "dependencies": {
-    "angular2": "^2.0.0-beta.9",
+    "angular2": "2.0.0-beta.17",
     "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.13",
+    "es6-shim": "0.35.0",
     "reflect-metadata": "0.1.2",
-    "rxjs": "^5.0.0-beta.2",
+    "rxjs": "5.0.0-beta.6",
     "systemjs": "^0.19.8",
-    "zone.js": "^0.5.15"
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^0.16.0-rc.0",
@@ -38,6 +38,7 @@
     "raw-loader": "^0.5.1",
     "source-map-loader": "^0.1.5",
     "typescript": "^1.7.3",
+    "typings": "^0.8.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
